--- a/second-htmlCss/style.css
+++ b/second-htmlCss/style.css
@@ -4,17 +4,19 @@
   padding: 0;
 }
 
-/* Page Sections */
+/* PAGE SECTIONS */
 body {
   color: #444;
   font-family: sans-serif;
 
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 
 .container {
   width: 800px;
   margin: 0 auto;
+  /* position: relative; */
 }
 
 .main-header {
@@ -26,6 +28,7 @@ body {
 
 nav {
   font-size: 18px;
+  /* text-align: center; */
 }
 
 article {
@@ -34,6 +37,7 @@ article {
 
 .post-header {
   margin-bottom: 40px;
+  /* position: relative; */
 }
 
 aside {
@@ -172,11 +176,42 @@ a:active {
   font-style: italic;
 }
 
-/* Resolving conflicts */
+/* PSUEDO ELEMENTS */
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+/* h3 + p::first-line {
+  color: red;
+} */
+
+h2 {
+  /* background-color: orange; */
+  position: relative;
+}
+
+h2::before {
+  content: "TOP";
+  background-color: #ffe70e;
+  color: #444;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -10px;
+  right: -25px;
+}
+
+/* RESOLVING CONFLICTS */
 /* #copyright {
   color: red;
 }
-
+.main-header nav a:visited {
+  color: red;
+  margin-top: 100px;
+}
 .copyright {
   color: blue;
 }
@@ -207,8 +242,19 @@ nav a:link {
   margin-right: 30px;
   margin-top: 10px;
   display: inline-block;
+  /* text-align: center; */
 }
 
 nav a:link:last-child {
   margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
 }
