--- a/third-css-layouts/style.css
+++ b/third-css-layouts/style.css
@@ -2,6 +2,7 @@
   /* border-top: 10px solid #1098ad; */
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 /* PAGE SECTIONS */
@@ -14,7 +15,7 @@ body {
 }
 
 .container {
-  width: 800px;
+  width: 1200px;
   margin: 0 auto;
   /* position: relative; */
 }
@@ -44,8 +45,7 @@ aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  padding: 50px 0;
-  width: 500px;
+  padding: 50px 40px;
 }
 
 /* SMALLER ELEMENTS */
@@ -77,6 +77,7 @@ h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 p {
@@ -125,6 +126,7 @@ li:last-child {
 
 .related {
   list-style-type: none;
+  margin-left: 0;
 }
 
 /* 
@@ -240,7 +242,6 @@ nav a:link {
 
   display: block; */
   margin-right: 30px;
-  margin-top: 10px;
   display: inline-block;
   /* text-align: center; */
 }
@@ -257,4 +258,112 @@ button {
   position: absolute;
   bottom: 50px;
   right: 50px;
+}
+
+/* FLOATS */
+/*
+.author-img {
+  float: left;
+  margin-bottom: 20px;
+}
+
+.author {
+  padding-left: 90px;
+float: left;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+ h1 {
+  float: left;
+}
+
+nav {
+  float: right;
+} 
+
+.clear {
+  clear: both;
+} 
+
+.clearfix::after {
+  clear: both;
+  content: "";
+  display: block;
+}
+
+article {
+  width: 825px;
+  float: left;
+}
+
+aside {
+  width: 300px;
+  float: right;
+}
+
+footer {
+  clear: both;
+} */
+
+/* FLEXBOX */
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.author {
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
+  display: block;
+}
+
+.related-author {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.row {
+  display: flex;
+  align-items: flex-start;
+  gap: 75px;
+  margin-bottom: 60px;
+}
+
+article {
+  flex: 1;
+  margin-bottom: 0;
+}
+
+aside {
+  /* 
+  DEFAULTS:
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  */
+  flex: 0 0 300px;
 }
