--- a/03-css-layouts/style.css
+++ b/03-css-layouts/style.css
@@ -23,7 +23,7 @@ body {
 .main-header {
   background-color: #f7f7f7;
   padding: 20px 40px;
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
   /* height: 80px; */
 }
 
@@ -33,7 +33,7 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .post-header {
@@ -346,7 +346,8 @@ footer {
   font-style: italic;
 }
 
-.row {
+/* FLEXBOX LAYOUT */
+/* .row {
   display: flex;
   align-items: flex-start;
   gap: 75px;
@@ -365,5 +366,30 @@ aside {
   flex-shrink: 1;
   flex-basis: auto;
   */
-  flex: 0 0 300px;
+/* flex: 0 0 300px;
+}  */
+
+/* GRID LAYOUT */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: start;
+}
+
+.main-header {
+  /* grid-column: 1 / span 2; */
+  grid-column: 1 / -1;
+}
+
+article {
+}
+
+aside {
+  /* align-self: start; */
+}
+
+footer {
+  grid-column: 1 / -1;
 }
