--- a/06-omnifood/css/general.css
+++ b/06-omnifood/css/general.css
@@ -85,6 +85,16 @@ body {
   display: grid;
   row-gap: 9.6rem;
   column-gap: 6.4rem;
+
+  /* margin-bottom: 9.6rem; */
+}
+
+/* .grid:last-child {
+  margin-bottom: 0;
+} */
+
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
 }
 
 .grid--2-cols {
@@ -235,4 +245,9 @@ strong {
   width: 3rem;
   height: 3rem;
   color: #e67e22;
+}
+
+.crossline {
+  color: #555;
+  text-decoration: line-through;
 }
