--- a/08-omnifood-optimizations/css/general.css
+++ b/08-omnifood-optimizations/css/general.css
@@ -70,6 +70,9 @@ html {
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
   overflow-x: hidden;
+
+  /* Compatibility issues */
+  /* scroll-behavior: smooth; */
 }
 
 body {
