--- a/21-css-natours/css/style.css
+++ b/21-css-natours/css/style.css
@@ -47,10 +47,6 @@ body {
   height: 35px;
 }
 
-.logo:hover {
-  animation: moveInRight 1s ease-out;
-}
-
 .text-box {
   position: absolute;
   top: 40%;
@@ -125,6 +121,22 @@ body {
   }
 }
 
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  /* 80% {
+    transform: translateY(-10px);
+  } */
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -133,6 +145,7 @@ body {
   display: inline-block;
   border-radius: 300px;
   transition: all 0.2s;
+  position: relative;
 }
 
 .btn:hover {
@@ -147,4 +160,31 @@ body {
 .btn-white {
   background-color: #fff;
   color: #777;
+}
+
+.btn::after {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 300px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.btn-white::after {
+  background-color: #fff;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-animated {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards;
 }
