--- a/21-css-natours/sass/components/_button.scss
+++ b/21-css-natours/sass/components/_button.scss
@@ -33,6 +33,7 @@
     z-index: -1;
     transition: all 0.4s;
   }
+
   &--white {
     background-color: $color-white;
     color: $color-grey-dark;
@@ -40,6 +41,15 @@
       background-color: $color-white;
     }
   }
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
   &--animated {
     animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
