--- a/21-css-natours/sass/components/_form.scss
+++ b/21-css-natours/sass/components/_form.scss
@@ -21,6 +21,10 @@
       border-bottom: 3px solid $color-primary;
     }
 
+    &:focus:invalid {
+      border-bottom: 3px solid $color-secondary-dark;
+    }
+
     &::-webkit-input-placeholder {
       color: $color-grey-dark-2;
     }
