--- a/21-css-natours/sass/components/_form.scss
+++ b/21-css-natours/sass/components/_form.scss
@@ -21,6 +21,7 @@
       border-bottom: 3px solid $color-primary;
     }
 
+    // input validation
     &:focus:invalid {
       border-bottom: 3px solid $color-secondary-dark;
     }
@@ -31,5 +32,17 @@
   }
 
   &__label {
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-left: 2rem;
+    margin-top: 0.7rem;
+    display: block;
+    transition: all 0.3s;
+  }
+
+  &__input:placeholder-shown + &__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4rem);
   }
 }
