--- a/21-css-natours/css/style.css
+++ b/21-css-natours/css/style.css
@@ -257,14 +257,15 @@ body {
       @media (max-width: 56.25em) {
         .composition__photo--p1 {
           top: 0;
-          transform: translate(1.2); } }
+          transform: scale(1.2); } }
     .composition__photo--p2 {
       right: 0;
       top: 2rem; }
       @media (max-width: 56.25em) {
         .composition__photo--p2 {
           top: -1rem;
-          transform: translate(1.3); } }
+          transform: scale(1.3);
+          z-index: 100; } }
     .composition__photo--p3 {
       left: 20%;
       top: 10rem; }
@@ -272,7 +273,7 @@ body {
         .composition__photo--p3 {
           top: 1rem;
           left: 0;
-          transform: translate(1.1); } }
+          transform: scale(1.1); } }
     .composition__photo:hover {
       outline: 1.5rem solid #55c57a;
       transform: scale(1.05) translateY(-0.5rem);
@@ -289,6 +290,9 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform 0.2s; }
+  @media (max-width: 56.25em) {
+    .feature-box {
+      padding: 2rem; } }
   .feature-box__icon {
     font-size: 6rem;
     margin-bottom: 0.5rem;
@@ -297,6 +301,9 @@ body {
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent; }
+    @media (max-width: 56.25em) {
+      .feature-box__icon {
+        margin-bottom: 0; } }
   .feature-box:hover {
     transform: scale(1.03) translateY(-1.5rem); }
 
@@ -862,7 +869,7 @@ body {
     transform: skewY(7deg); }
   @media (max-width: 56.25em) {
     .section-features {
-      padding: 15rem 0; } }
+      padding: 10rem 0; } }
 
 .section-tours {
   background-color: #f7f7f7;
