--- a/21-css-natours/sass/components/_composition.scss
+++ b/21-css-natours/sass/components/_composition.scss
@@ -23,7 +23,7 @@
 
       @include respond(tab-port) {
         top: 0;
-        transform: translate(1.2);
+        transform: scale(1.2);
       }
     }
     &--p2 {
@@ -32,7 +32,8 @@
 
       @include respond(tab-port) {
         top: -1rem;
-        transform: translate(1.3);
+        transform: scale(1.3);
+        z-index: 100;
       }
     }
     &--p3 {
@@ -42,7 +43,7 @@
       @include respond(tab-port) {
         top: 1rem;
         left: 0;
-        transform: translate(1.1);
+        transform: scale(1.1);
       }
     }
 
