--- a/21-css-natours/sass/layout/_navigation.scss
+++ b/21-css-natours/sass/layout/_navigation.scss
@@ -1,4 +1,5 @@
 .navigation {
+  // FIXME: navigation
   &__checkbox {
     display: none;
   }
@@ -58,7 +59,7 @@
     height: 100vh;
     position: fixed;
     top: 0;
-    left: 0;
+    left: -25%;
     z-index: 1500;
 
     opacity: 0;
@@ -67,7 +68,10 @@
   }
 
   &__list {
-    @include centering;
+    position: absolute;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%, -50%);
     list-style: none;
     text-align: center;
     width: 100%;
